[package]
name = "regn"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
home = "0.5.12"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.101"
