[package]
name = "regn"
version = "0.1.6"
edition = "2024"
description = "Weather forecast in the terminal."
repository = "https://github.com/simon-danielsson/regn"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
keywords = ["tui", "weather", "terminal", "cli"]
homepage = "https://www.simondanielsson.se"
license = "MIT"
rust-version = "1.88.0"

[dependencies]
crossterm = "0.29.0"
home = "0.5.12"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
